fix spacing at the bottom of the pages

--- a/sites/all/themes/baddercamp/css/layout-fixed-min876.css
+++ b/sites/all/themes/baddercamp/css/layout-fixed-min876.css
@@ -152,7 +152,8 @@ body.login-dropdown #page-wrapper {
 }
 
 #content-area {
-    margin: 0;
+  margin: 0;
+  padding-bottom: 30px;
 }
 
 #content .section,
